@@ -50,6 +50,7 @@ InfoRepo::InfoRepo(int argc, ACE_TCHAR *argv[])
 #endif
 , resurrect_(true)
 , finalized_(false)
+, servant_finalized_(false)
 , federator_(this->federatorConfig_)
 , federatorConfig_(argc, argv)
 , lock_()
@@ -88,6 +89,14 @@ InfoRepo::finalize()
     return;
   }
 
+  if (!this->servant_finalized_) {
+    // reached if the ImR caused the ORB to shut down,
+    // which bypasses InfoRepo::handle_exception()
+    this->info_servant_->finalize();
+    this->federator_.finalize();
+    this->servant_finalized_ = true;
+  }
+
   TheServiceParticipant->shutdown();
 
   if (!CORBA::is_nil(this->orb_)) {
@@ -103,6 +112,7 @@ InfoRepo::handle_exception(ACE_HANDLE /* fd */)
   // these should occur before ORB::shutdown() since they use the ORB/reactor
   this->info_servant_->finalize();
   this->federator_.finalize();
+  this->servant_finalized_ = true;
 
   this->orb_->shutdown(true);
   return 0;
@@ -221,10 +231,9 @@ InfoRepo::init()
   this->info_servant_ =
     new TAO_DDS_DCPSInfo_i(this->orb_, this->resurrect_, this,
                            this->federatorConfig_.federationId());
-  PortableServer::ServantBase_var servant(this->info_servant_);
 
   // Install the DCPSInfo_i into the Federator::Manager.
-  this->federator_.info() = this->info_servant_;
+  this->federator_.info() = this->info_servant_.in();
 
   CORBA::Object_var obj =
     this->orb_->resolve_initial_references("RootPOA");
@@ -249,7 +258,7 @@ InfoRepo::init()
 
   PortableServer::ObjectId_var oid =
     PortableServer::string_to_ObjectId("InfoRepo");
-  info_poa->activate_object_with_id(oid, this->info_servant_);
+  info_poa->activate_object_with_id(oid, this->info_servant_.in());
   obj = info_poa->id_to_reference(oid);
   // the object is created locally, so it is safe to do an
   // _unchecked_narrow, this was needed to prevent an exception
