@@ -1,3 +1,12 @@
+Thu Dec  4 20:30:40 UTC 2014  Adam Mitz  <mitza@ociweb.com>
+
+        * dds/InfoRepo/DCPSInfoRepoServ.h:
+        * dds/InfoRepo/DCPSInfoRepoServ.cpp:
+
+          Made InfoRepo shutdown compatible with TAO ImR.
+          The ImR can be commanded to shut down the ORB which will
+          not run any of the InfoRepo's usual pre-ORB::shutdown() code.
+
 Thu Dec  4 16:37:51 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>
 
         * dds/DCPS/DataReaderImpl.cpp:
